--- a/etp/src/index.html
+++ b/etp/src/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Etp</title>
-    <base href="/" />
+    <!-- <base href="/" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://solarbankers.org/static/logo.png"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
