validation updated but registeration error

--- a/etp/src/index.html
+++ b/etp/src/index.html
@@ -26,6 +26,6 @@
     ></script>
   </head>
   <body class="mat-typography">
-    <app-root></app-root>
+    <app-root i18n></app-root>
   </body>
 </html>
