--- a/etp/src/index.html
+++ b/etp/src/index.html
@@ -30,7 +30,10 @@
       href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css"
+    />
     <script
       src="https://kit.fontawesome.com/f5b6aa053d.js"
       crossorigin="anonymous"
