--- a/etp/src/index.html
+++ b/etp/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>ETP - solar bankers</title>
+
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -33,6 +34,14 @@
       src="https://kit.fontawesome.com/f5b6aa053d.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <app-root></app-root>
