fixed complete reg data

--- a/etp/src/index.html
+++ b/etp/src/index.html
@@ -2,8 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ETP - solar bankers</title>
+    <!-- Primary Meta Tags -->
+    <title>Welcome to Energy Trading Platform</title>
+    <meta name="title" content="Welcome to Energy Trading Platform" />
+    <meta name="description" content="" />
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://etp.solarbankers.org/" />
+    <meta property="og:title" content="Welcome to Energy Trading Platform" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="./assets/img/laptop-and-iphone.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="http://etp.solarbankers.org/" />
+    <meta
+      property="twitter:title"
+      content="Welcome to Energy Trading Platform"
+    />
+    <meta property="twitter:description" content="" />
+    <meta property="twitter:image" content="" />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
