--- a/index.html
+++ b/index.html
@@ -286,6 +286,13 @@
                      <span class="p-title">- </span> One (1) 16 GB MicroSD card
                      preloaded with the latest version of NOOBS
                   </p>
+                  <div class="mx-auto my-5 px-5 w-50 w-sm-100">
+                     <img
+                        src="package.jpg"
+                        alt="Components of the Package"
+                        class="img-fluid"
+                     />
+                  </div>
                </div>
 
                <div class="line"></div>
